# itom-chat-ui

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
.agent-forge/: project.json
.agent-forge/plans/: backlog.json  progress-log.json  project-brief.md  roadmap.json
.agent-forge/scripts/: create-github-issues.sh
.agent-forge/state/: build-output.json  monitor-output.json  pipeline.json  plan-output.json  test-output.json  validate-output.json
.agent-forge/tests/: test-cases.json
.claude/: settings.json
.claude/commands/: forge-start.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: artifact_detector.py  auth.py  config.py  database.py  main.py
backend/app/models/: agent.py  auth.py  chat.py  health.py  streaming.py  websocket.py
backend/app/routers/: agents.py  chat.py  chat_stream.py  conversations.py  health.py  websocket.py  worklog.py
backend/app/services/: claude_service.py  connection_manager.py  conversation_service.py  orchestrator.py  streaming.py
backend/tests/: conftest.py  test_artifact_detector.py  test_clarification.py  test_claude_service.py  test_conversations.py  test_database.py  test_health.py  test_websocket.py  test_worklog.py
backend/tests/integration/: test_claude_integration.py
docs/: api.md  architecture-claude-integration.md
frontend/: .env.example  .gitignore  .prettierignore  eslint.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: index.ts  (+4 more)
scripts/: start-system.sh
(+63 files in other folders)
